load data from yaml

--- a/internal/generator/templates/app/cmd/{{app_name}}/main.go.tmpl
+++ b/internal/generator/templates/app/cmd/{{app_name}}/main.go.tmpl
@@ -4,14 +4,14 @@ import (
 	"flag"
 	"log"
 
-	"{{ .Module }}/internal/app"
+	"{{ .App.Module }}/internal/app"
 )
 
 // ldflags pass variables
 var (
 	commit      = "none"
 	version     = "dev"
-	serviceName = "{{ .Module }}"
+	serviceName = "{{ .App.Module }}"
 )
 
 func main() {
