--- a/internal/generator/templates/app/internal/app/run.go.tmpl
+++ b/internal/generator/templates/app/internal/app/run.go.tmpl
@@ -1,9 +1,9 @@
 package app
 
 import (
-	"{{ .Module }}/internal/handler/http"
-	"{{ .Module }}/internal/handler/http/api/v1"
-	"{{ .Module }}/pkg/gracy"
+	"{{ .App.Module }}/internal/handler/http"
+	"{{ .App.Module }}/internal/handler/http/api/v1"
+	"{{ .App.Module }}/pkg/gracy"
 	"fmt"
 	"go.uber.org/zap"
 )
