--- a/internal/generator/templates/app/internal/handler/http/api/v1/handler.go.tmpl
+++ b/internal/generator/templates/app/internal/handler/http/api/v1/handler.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"context"
 	"encoding/json"
 	"go.uber.org/zap"
-    "{{ .Module }}/pkg/logger"
+    "{{ .App.Module }}/pkg/logger"
 	"net/http"
 )
 
