--- a/internal/generator/templates/app/internal/handler/http/router.go.tmpl
+++ b/internal/generator/templates/app/internal/handler/http/router.go.tmpl
@@ -1,8 +1,8 @@
 package http
 
 import (
-	"{{ .Module }}/pkg/logger"
-	"{{ .Module }}/pkg/middleware"
+	"{{ .App.Module }}/pkg/logger"
+	"{{ .App.Module }}/pkg/middleware"
 	"github.com/gorilla/mux"
 	"net/http"
 	"net/http/pprof"
