--- a/internal/generator/templates/app/pkg/middleware/access_log.go.tmpl
+++ b/internal/generator/templates/app/pkg/middleware/access_log.go.tmpl
@@ -2,7 +2,7 @@ package middleware
 
 import (
 	"bytes"
-	"{{ .Module }}/pkg/logger"
+	"{{ .App.Module }}/pkg/logger"
 	"io/ioutil"
 	"net/http"
 	"runtime/debug"
