--- a/internal/generator/templates/app/internal/app/app.go.tmpl
+++ b/internal/generator/templates/app/internal/app/app.go.tmpl
@@ -4,12 +4,8 @@ package app
 
 import (
 	"sync"
-    {{if .Storages}}
-        {{range .Storages -}}
-            {{if eq .Type `mysqlx`}}"github.com/jmoiron/sqlx"{{end}}
-            {{if eq .Type `mysql`}}"database/sql"{{end}}
-        {{end -}}
-    {{end}}
+    {{ renderStorageImports }}
+
 	"{{ .App.Module }}/internal/config"
 	"go.uber.org/zap/zapcore"
 )
