--- a/internal/generator/templates/app/internal/app/container.go.tmpl
+++ b/internal/generator/templates/app/internal/app/container.go.tmpl
@@ -15,6 +15,8 @@ import (
             "{{ $.App.Module }}/{{.Pkg}}"
         {{end -}}
     {{end}}
+
+    "sync"
 )
 
 type Container struct {
@@ -26,6 +28,7 @@ type Container struct {
 	{{end}}
 
 	deps    map[string]interface{}
+	mu      *sync.RWMutex
 }
 
 func NewContainer({{if .Storages}}{{range $key, $val := .Storages}}{{$key}} {{$val.Connection}},{{end -}}{{end}}) *Container {
@@ -39,12 +42,27 @@ func NewContainer({{if .Storages}}{{range $key, $val := .Storages}}{{$key}} {{$v
             {{end -}}
 	    {{end}}
 		deps:    make(map[string]interface{}),
+		mu:      &sync.RWMutex{},
 	}
 }
 
 func (c *Container) GetUseCase() {{ $.UseCase.Type }} {
 
     return {{ $.UseCase.BuildFunc }}({{range $p := $.UseCase.Deps}} c.get{{toCamelCase $p}}(), {{end}})
+}
+
+func (c *Container) getDep(name string) interface{} {
+    c.mu.RLock()
+    defer c.mu.RUnlock()
+
+    return c.deps[name]
+}
+
+func (c *Container) setDep(name string, val interface{}) {
+    c.mu.Lock()
+    defer c.mu.Unlock()
+
+    c.deps[name] = val
 }
 
 {{if .Storages}}
@@ -59,8 +77,16 @@ func (c *Container) GetUseCase() {{ $.UseCase.Type }} {
 {{if .Dependencies}}
     {{range $key, $val := .Dependencies}}
         func (c *Container) get{{toCamelCase $key.String }}() {{ $val.Type }} {
-            
-            return {{ $val.BuildFunc }} ({{range $p := $val.Deps}} c.get{{toCamelCase $p}}(), {{end}})
+            dep := c.getDep("{{toCamelCase $key.String }}")
+            res, ok := dep.({{$val.Type}})
+            if ok && res != nil {
+                return res
+            }
+
+            d := {{ $val.BuildFunc }} ({{range $p := $val.Deps}} c.get{{toCamelCase $p}}(), {{end}})
+            c.setDep("{{toCamelCase $key.String }}", d)
+
+            return d
         }
     {{end}}
 {{end}}
