--- a/internal/generator/templates/app/internal/app/run.go.tmpl
+++ b/internal/generator/templates/app/internal/app/run.go.tmpl
@@ -3,7 +3,7 @@ package app
 import (
 	"{{ .App.Module }}/internal/handler/http"
 	"{{ .App.Module }}/internal/handler/http/api/v1"
-	"{{ .App.Module }}/pkg/gracy"
+	"github.com/hanagantig/gracy"
 	"fmt"
 	"go.uber.org/zap"
 )
