--- a/internal/generator/templates/app/internal/app/database.go.tmpl
+++ b/internal/generator/templates/app/internal/app/database.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"{{ .App.Module }}/internal/config"
 	"fmt"
 	_ "github.com/go-sql-driver/mysql"
-	{{ renderImports "storage" .Chunks }}
+	{{ renderImports "storage" "build" .Chunks }}
 	"net/url"
 	"strconv"
 	"strings"
