generate use case code

--- a/internal/generator/templates/app/internal/service/method.go.tmpl
+++ b/internal/generator/templates/app/internal/service/method.go.tmpl
@@ -1,6 +1,10 @@
 package {{$.PkgName}}
 
-func (s *Service) {{toCamelCase $.MethodName}}() {
+import (
+	"context"
+)
+
+func (s *Service) {{toCamelCase $.MethodName}}(ctx context.Context) {
     // TODO: put your business logic here
     panic("implement me")
 }
