--- a/internal/generator/templates/app/internal/service/service.go.tmpl
+++ b/internal/generator/templates/app/internal/service/service.go.tmpl
@@ -3,7 +3,7 @@ package {{$.GetPackageName}}
 {{if .Deps}}
     {{range $val := .Deps}}
         type {{$val}} interface {
-        	// TODO: define dependency methods here
+        	// TODO: define interface to inject a service or an adapter
         }
     {{end}}
 {{end}}
