update chain and usecase methods in handler

--- a/internal/generator/templates/app/internal/handler/http/api/v1/handler.go.tmpl
+++ b/internal/generator/templates/app/internal/handler/http/api/v1/handler.go.tmpl
@@ -2,32 +2,19 @@ package v1
 
 import (
 	"context"
-	"encoding/json"
-	"go.uber.org/zap"
-    "{{ .App.Module }}/pkg/logger"
-	"net/http"
+	"{{ .App.Module }}/pkg/logger"
 )
 
-type ExampleUseCase interface {
-	Pong(ctx context.Context) (string, error)
+type UseCase interface {
+    {{range $val := .UseCase.Methods}}{{toCamelCase $val}}(ctx context.Context) (interface{}, error)
+    {{end}}
 }
 
 type Handler struct {
-	uc     ExampleUseCase
+	uc     UseCase
 	logger logger.Logger
 }
 
-func NewHandler(uc ExampleUseCase, logs logger.Logger) *Handler {
+func NewHandler(uc UseCase, logs logger.Logger) *Handler {
 	return &Handler{uc: uc, logger: logs}
-}
-
-func (h Handler) Ping(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	ctx := r.Context()
-
-	res, err := h.uc.Pong(ctx)
-	err = json.NewEncoder(w).Encode(res)
-	if err != nil {
-		h.logger.Error("failed to encode json", zap.Error(err))
-	}
 }
