--- a/internal/generator/templates/app/internal/usecase/method.go.tmpl
+++ b/internal/generator/templates/app/internal/usecase/method.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"context"
 )
 
-func (u *UseCase) {{toCamelCase $}}(ctx context.Context) {
+func (u *UseCase) {{toCamelCase $}}(ctx context.Context) (interface{}, error) {
     // TODO: put your service call logic here
-    panic("implement me")
+    return "implement UseCase method {{toCamelCase $}}", nil
 }
