goro yaml validation

--- a/internal/generator/templates/app/internal/adapter/method.go.tmpl
+++ b/internal/generator/templates/app/internal/adapter/method.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"context"
 )
 
-func (r *Repository) {{toCamelCase $.MethodName}}(ctx context.Context) {
+func (r *Repository) {{toPublicName (toCamelCase $.MethodName)}}(ctx context.Context) {
     // TODO: put your repository logic here
     panic("implement me")
 }
