fix(sql_transactor): fix NewTransactor in sql_transactor.go.tmpl
add map initialization

--- a/internal/generator/templates/app/internal/adapter/sql_transactor.go.tmpl
+++ b/internal/generator/templates/app/internal/adapter/sql_transactor.go.tmpl
@@ -19,7 +19,9 @@ type Transactor struct {
 }
 
 func NewTransactor(c {{ $.Storage.GetConnectionType }}) Transactor {
-	return Transactor{conn: c}
+	return Transactor{
+    		conn:  c,
+    		wraps: make(map[context.Context][]func(ctx context.Context) error)}
 }
 
 func (t *Transactor) NewTxContext(ctx context.Context) context.Context {
