--- a/internal/generator/templates/app/internal/app/app.go.tmpl
+++ b/internal/generator/templates/app/internal/app/app.go.tmpl
@@ -8,7 +8,7 @@ package app
 import (
 	"sync"
 	"errors"
-    {{ renderImports "storage" "definition" .Chunks }}
+    {{ renderImports "storage" "definition" "all" .Chunks }}
 	"{{ .App.Module }}/internal/config"
 	"go.uber.org/zap/zapcore"
 )
@@ -54,10 +54,10 @@ func NewApp(configPath string) (*App, error) {
 	//goro:init healthChecker
 	//app.initHealthChecker()
 
-	{{ renderInitializationsWithError "storage" "app" .Chunks }}
+	{{ renderInitializations "storage" "app" .Chunks }}
 
 	//goro:init dependencies
-	app.c = NewContainer({{range .Chunks}}{{if eq .Scope `storage`}}app.{{.Name}},{{end}}{{end}})
+	app.c = NewContainer({{range .Chunks}}{{if eq .Scope `storage`}}app.{{if contains .Name "http"}}{{.Name}}Client, {{else}}{{.Name}}, {{end}}{{end}}{{end}})
 
 	return app, nil
 }
