--- a/internal/generator/templates/app/internal/app/http.go.tmpl
+++ b/internal/generator/templates/app/internal/app/http.go.tmpl
@@ -9,6 +9,7 @@ import (
 	"{{ .App.Module }}/internal/handler/http"
 	"{{ .App.Module }}/internal/handler/http/api/v1"
 	"github.com/hanagantig/gracy"
+	{{ renderImports "storage" "build" "http" .Chunks }}
 	"fmt"
 	"go.uber.org/zap"
 )
@@ -51,3 +52,5 @@ func (a *App) startHTTPServer() {
 		a.logger.Fatal("Fail to start %s http server:", zap.String("app",a.cfg.App.Name), zap.Error(err))
 	}
 }
+
+{{ renderBuild "storage" "http" .Chunks }}
